tests/errors/overflowing-int/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0013]: Overflowing integer literal.
  │
  ├─𜱶 help: int literals must fit in a signed 64-bit integer.
  │
1 │ def big = 999999999999999999999999
  │           ^^^^^^^^^^^^^^^^^^^^^^^^
  ╰─𜱶 tests/errors/overflowing-int/main.pa:1:11
